layout bug fix

--- a/app/assets/style/layout/_menuUser.scss
+++ b/app/assets/style/layout/_menuUser.scss
@@ -1,7 +1,5 @@
 .menu-user{
     width: inherit;
-    margin-top: 363px;
-    margin-left: 32px;
     a{
         img{
             width: 40px;
@@ -10,17 +8,13 @@
         }
     }
     .name-mail{
-        margin-left: 16px;
         height: inherit;
         .username{
-            color: $font-black-color;
-            line-height: 1.18;
-            font-weight: bold;
+            color: $font-black-color;            
         }
         .usermail{
             font-size: $fz-s-size;
             color: $font-gray-color;
-            margin-top: 4px;
         }
     }
 }
