--- a/app/assets/style/setting/_utility.scss
+++ b/app/assets/style/setting/_utility.scss
@@ -10,6 +10,14 @@
     line-height: 1.2;
 }
 
+.mgt-4{
+    margin-top: 4px;
+}
+
+.mgt-40{
+    margin-top: 40px;
+}
+
 .mgb-48{
     margin-bottom: 48px;
 }
@@ -22,8 +30,20 @@
     margin-bottom: 20px;
 }
 
+.mgb-30{
+    margin-bottom: 30px;
+}
+
+.mgl-16{
+    margin-left: 16px;
+}
+
 .mgl-25{
     margin-left: 25px;
+}
+
+.mgl-32{
+    margin-left: 32px;
 }
 
 .font-s-size{
@@ -36,4 +56,8 @@
 
 .pdl-24{
     padding-left: 24px;
+}
+
+.pdl-32{
+    padding-left: 32px;
 }
